# Alx_DjangoLearnLab

Introduction_to_Django/: pyproject.toml
advanced-api-project/: db.sqlite3  pyproject.toml
advanced_features_and_security/: pyproject.toml
advanced_features_and_security/LibraryProject/: README.md  db.sqlite3  pyproject.toml  settings.py
advanced_features_and_security/LibraryProject/LibraryProject/: settings.py  urls.py
advanced_features_and_security/LibraryProject/bookshelf/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
advanced_features_and_security/LibraryProject/bookshelf/Templates/bookshelf/: book_form.html  book_list.html  form_example.html  login.html  signup.html
advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/: base.html  book_confirm_delete.html  form_example.html
advanced_features_and_security/bookshelf/migrations/: 0001_initial.py
api_project/: db.sqlite3  pyproject.toml
django_blog/: db.sqlite3  pyproject.toml
django_blog/blog/: forms.py  models.py  urls.py  views.py
django_blog/blog/migrations/: 0001_initial.py  0002_comment.py  0003_tag.py  0004_remove_tag_posts_post_tags.py
django_blog/blog/static/css/: styles.css
django_blog/blog/templates/blog/: add_comment.html  base.html  base_generic.html  comment_confirm_delete.html  edit_comment.html  login.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  posts_by_tag.html  profile.html  register.html
django_blog/django_blog/: settings.py
social_media_api/: README.md  db.sqlite3  pyproject.toml
(+60 files in other folders)
