[tool.poetry]
name = "advanced-features-and-security"
version = "0.1.0"
description = ""
authors = ["j1ere <jeremywambua106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
